--- a/charts/audits-service/templates/secret.yaml
+++ b/charts/audits-service/templates/secret.yaml
@@ -12,6 +12,7 @@ data:
   FRONTEGG_METADATA_SERVICE_FETCH_PUBSUB_STRATEGY: {{ .metadataServiceFetchPubsubStrategy | b64enc | quote }}
   FRONTEGG_AUDITS_SERVICE_HYBRID_AUTH_RETRY_DELAY_MS: {{ .authenticationRetryDelay | b64enc | quote }}
   FRONTEGG_AUDITS_SERVICE_HYBRID_SHUTDOWN_ON_INITIAL_AUTH_FAILURE: {{ .shutdownOnAuthenticationFailure | b64enc | quote }}
+  FRONTEGG_AUTHENTICATION_URL: {{ .authenticationUrl | b64enc | quote }}
   {{- end }}
   {{- end }}
   FRONTEGG_PORT: 3002
