publish audits-service hybrid helm chart

--- a/charts/audits-service/templates/config-map.yaml
+++ b/charts/audits-service/templates/config-map.yaml
@@ -6,3 +6,5 @@ metadata:
   {{- include "api-gateway.labels" . | nindent 4 }}
 data:
   FRONTEGG_HYBRID_MODE: "true"
+  FRONTEGG_PORT: 3002
+  FRONTEGG_SPLIT_IO_KEY: ''
