--- a/charts/audits-service/templates/secret.yaml
+++ b/charts/audits-service/templates/secret.yaml
@@ -9,6 +9,7 @@ data:
   FRONTEGG_CLIENT_ID: {{ required "A valid .Values.frontegg.clientId entry required!" .clientId | b64enc | quote }}
   FRONTEGG_API_KEY: {{ required "A valid .Values.frontegg.apiKey entry required!" .apiKey | b64enc | quote }}
   {{- with .sync }}
+  FRONTEGG_METADATA_SERVICE_URL: {{ .metadataServiceUrl | b64enc | quote }}
   FRONTEGG_METADATA_SERVICE_FETCH_PUBSUB_STRATEGY: {{ .metadataServiceFetchPubsubStrategy | b64enc | quote }}
   FRONTEGG_AUDITS_SERVICE_HYBRID_AUTH_RETRY_DELAY_MS: {{ .authenticationRetryDelay | b64enc | quote }}
   FRONTEGG_AUDITS_SERVICE_HYBRID_SHUTDOWN_ON_INITIAL_AUTH_FAILURE: {{ .shutdownOnAuthenticationFailure | b64enc | quote }}
