--- a/charts/audits-service/templates/secret.yaml
+++ b/charts/audits-service/templates/secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: {{ include "audits-service.fullname" . }}-secret
   labels:
-  {{- include "api-gateway.labels" . | nindent 4 }}
+  {{- include "audits-service.labels" . | nindent 4 }}
 data:
   {{- with .Values.frontegg }}
   FRONTEGG_CLIENT_ID: {{ required "A valid .Values.frontegg.clientId entry required!" .clientId | b64enc | quote }}
