--- a/charts/api-gateway/templates/deployment.yaml
+++ b/charts/api-gateway/templates/deployment.yaml
@@ -46,8 +46,11 @@ spec:
             httpGet:
               path: /healthcheck
               port: http
-            initialDelaySeconds: 20
+            initialDelaySeconds: 30
             periodSeconds: 10
+            successThreshold: 1
+            failureThreshold: 3
+            timeoutSeconds: 20
           readinessProbe:
             httpGet:
               path: /healthcheck
