--- a/charts/api-gateway/templates/deployment.yaml
+++ b/charts/api-gateway/templates/deployment.yaml
@@ -42,21 +42,14 @@ spec:
             - name: http
               containerPort: {{ .Values.service.targetPort }} # change this to 80 in the future
               protocol: TCP
+          {{- with .Values.livenessProbe }}
           livenessProbe:
-            httpGet:
-              path: /healthcheck
-              port: http
-            initialDelaySeconds: 30
-            periodSeconds: 10
-            successThreshold: 1
-            failureThreshold: 3
-            timeoutSeconds: 20
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+          {{- with .Values.readinessProbe }}
           readinessProbe:
-            httpGet:
-              path: /healthcheck
-              port: http
-            initialDelaySeconds: 5
-            periodSeconds: 5
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           env:
           {{- range $secret_name, $values := .Values.configuration.secrets }}
           {{- range $key, $value :=  $values}}
