publish audits-service hybrid helm chart

--- a/charts/audits-service/templates/config-map.yaml
+++ b/charts/audits-service/templates/config-map.yaml
@@ -9,3 +9,4 @@ data:
   FRONTEGG_HYBRID_MODE: "true"
   FRONTEGG_PORT: "3002"
   FRONTEGG_SPLIT_IO_KEY: ''
+  FRONTEGG_AUDITS_SERVICE_API_KEY: "frontegg-api-key"
