--- a/charts/identity-service/templates/migrations-pre-upgrade.yaml
+++ b/charts/identity-service/templates/migrations-pre-upgrade.yaml
@@ -10,8 +10,8 @@ metadata:
     {{- include "identity-service.labels" $top | nindent 4 }}
     app.kubernetes.io/component: pre-upgrade-migrations
   annotations:
-    helm.sh/hook": pre-install,pre-upgrade
-    helm.sh/hook-weight": "-1"
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-weight: "-1"
     helm.sh/hook-delete-policy: "before-hook-creation"
    {{- if .jobAnnotations }}
    {{- toYaml .jobAnnotations | nindent 4 }}
