--- a/charts/identity-service/templates/deployment.yaml
+++ b/charts/identity-service/templates/deployment.yaml
@@ -36,18 +36,14 @@ spec:
             - name: http
               containerPort: {{ .Values.service.targetPort }} # change this to 80 in the future
               protocol: TCP
+          {{- with .Values.livenessProbe }}
           livenessProbe:
-            httpGet:
-              path: /health
-              port: http
-            initialDelaySeconds: 20
-            periodSeconds: 10
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+          {{- with .Values.readinessProbe }}
           readinessProbe:
-            httpGet:
-              path: /health
-              port: http
-            initialDelaySeconds: 5
-            periodSeconds: 5
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           env:
             {{- range $secret_name, $values := .Values.configuration.secrets }}
             {{- range $key, $value :=  $values}}
