--- a/charts/event-service/templates/deployment.yaml
+++ b/charts/event-service/templates/deployment.yaml
@@ -5,7 +5,9 @@ metadata:
   labels:
   {{- include "event-service.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+  {{- if not .Values.autoscaling.enabled }}
+  replicas : {{ .Values.replicaCount }}
+  {{- end }}
   selector:
     matchLabels:
   {{- include "event-service.selectorLabels" . | nindent 6 }}
@@ -24,7 +26,6 @@ spec:
       imagePullSecrets:
       {{- toYaml . | nindent 8 }}
       {{- end }}
-
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.appVersion }}"
@@ -33,18 +34,14 @@ spec:
             - name: http
               containerPort: {{ .Values.service.targetPort }}
               protocol: TCP
+          {{- with .Values.livenessProbe }}
           livenessProbe:
-            httpGet:
-              path: /health
-              port: http
-            initialDelaySeconds: 20
-            periodSeconds: 10
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+          {{- with .Values.readinessProbe }}
           readinessProbe:
-            httpGet:
-              path: /health
-              port: http
-            initialDelaySeconds: 5
-            periodSeconds: 5
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           env:
             {{- range $secret_name, $values := .Values.configuration.secrets }}
             {{- range $key, $value :=  $values}}
