publish api-gateway hybrid helm chart

--- a/charts/api-gateway/templates/deployment.yaml
+++ b/charts/api-gateway/templates/deployment.yaml
@@ -33,7 +33,9 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
     {{- end }}
-
+      {{- with .Values.terminationGracePeriodSeconds }}
+      terminationGracePeriodSeconds: {{ .terminationGracePeriodSeconds }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.appVersion }}"
