--- a/charts/api-gateway/templates/deployment.yaml
+++ b/charts/api-gateway/templates/deployment.yaml
@@ -34,7 +34,7 @@ spec:
         {{- toYaml . | nindent 8 }}
     {{- end }}
       {{- with .Values.terminationGracePeriodSeconds }}
-      terminationGracePeriodSeconds: {{ .terminationGracePeriodSeconds }}
+      terminationGracePeriodSeconds: {{ . }}
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
