publish api-gateway hybrid helm chart

--- a/charts/api-gateway/templates/deployment.yaml
+++ b/charts/api-gateway/templates/deployment.yaml
@@ -5,7 +5,9 @@ metadata:
   labels:
     {{- include "api-gateway.labels" . | nindent 4 }}
 spec:
-  {{- if not .Values.autoscaling.enabled }}
+  {{- if and (hasKey .Values.supportRollouts .Values.unifiedTag) (index .Values.supportRollouts .Values.unifiedTag).scaleDeploymentToZero }}
+  replicas: 0
+  {{- else if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
